# dirapi

./: .gitignore  Pipfile  README.md  setup.cfg
.github/ISSUE_TEMPLATE/: bug_report.md
.github/ISSUE_TEMPLATE/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: pytest.yml
dirapi/: __init__.py  api_factory.py  help.py  meta.py  utils.py
examples/data/jsons/: sample1.json  sample2.json
examples/notebooks/: Example1.ipynb  Example2.ipynb
examples/sqls/master/: master.sql.j2
examples/sqls/transactions/: transaction1.sql.j2  transaction2.sql.j2
tests/: test_help.py  test_meta.py  test_utils.py
