[metadata]
name = dirapi
version = attr: dirapi.__version__
license_files = LICENSE
author = hmasdev
author_email = hmasuidev1com@gmail.com
url = http://github.com/hmasdev/dirapi
description = DirAPI: Directory to API
long_description = file: README.md
long_description_content_type = text/markdown
keywords = 
    API
    Directory
    Tool
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10


[options]
packages = find:

install_requires = 
    mypy-extensions >= 0.4.3

tests_require = 
    pytest>=6.1.2
    pytest-cov>=2.10.1
    flake8>=3.8.4
    mypy >= 0.931

[options.packages.find]
exclude =
    tests*